# oo7

./: Cargo.toml  README.md  coverage.sh
.github/workflows/: CI.yml  coverage.yml  deploy.yml  docs.yml  python.yml  typos.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
client/: Cargo.toml  README.md
client/src/: keyring.rs  lib.rs  mac.rs  migration.rs  secret.rs
client/src/dbus/api/: collection.rs  secret.rs  service.rs
client/src/file/: locked_item.rs  locked_keyring.rs  mod.rs  unlocked_item.rs  unlocked_keyring.rs
client/src/file/api/: encrypted_item.rs  legacy_keyring.rs  mod.rs
client/tests/: file_unlocked_keyring.rs  keyring.rs  schema.rs
git-credential/: Cargo.toml  README.md
git-credential/src/: main.rs
kwallet/cli/: Cargo.toml
kwallet/parser/: Cargo.toml
kwallet/parser/src/: crypto.rs
macros/: Cargo.toml
macros/src/: lib.rs
pam/: Cargo.toml  meson.build
pam/src/: meson.build  socket.rs
portal/: Cargo.toml  README.md
portal/src/: main.rs
python/: Cargo.toml
server/: Cargo.toml  README.md
server/data/: meson.build
server/po/: LINGUAS  cs.po  fi.po  it.po  ka.po  pl.po  ru.po  sl.po  uk.po  zh_CN.po
server/src/: capability.rs  login.rs  main.rs  meson.build  migration.rs  session.rs  tests.rs
server/src/collection/: mod.rs  tests.rs
server/src/gnome/: internal.rs  prompter.rs
server/src/item/: mod.rs  tests.rs
server/src/pam_listener/: mod.rs  tests.rs
server/src/plasma/: prompter.rs
server/src/prompt/: mod.rs  tests.rs
server/src/service/: mod.rs  tests.rs
