[package]
name = "oo7-pam"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "PAM module for oo7 Secret Service integration"

[lib]
name = "pam_oo7"
crate-type = ["cdylib"]

[dependencies]
libc.workspace = true
serde.workspace = true
serde_repr.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "time"] }
tracing.workspace = true
tracing-journald = "0.3"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zeroize.workspace = true
zvariant.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }
